# pydantic-ai-agent

./: .gitignore  README.md  agent.py  app.py  examples.json  pyproject.toml
agents/: models.py  qa_agent.py  search_agent.py  tools.py
